--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>tradenity-public</id>
+            <name>tradenity-release-public</name>
+            <url>http://artifacts.tradenity.com/artifactory/tradenity-release-public</url>
+        </repository>
+    </repositories>
     <build>
         <finalName>java-sdk-spring-ext</finalName>
         <plugins>
@@ -66,6 +73,11 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
             </plugin>
         </plugins>
     </build>
